Added img by project

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -24,17 +24,22 @@
 
 
              <div class="phone">
-               <i class="bi bi-github"></i>
-               <h4>Github:</h4>
-               <p><a href="#">@gonzalo-droid</a></p>
-             </div>
-
-
-             <div class="phone">
                <i class="bi bi-linkedin"></i>
                <h4>LinkedIn:</h4>
-               <p><a href="#">@gonzalo-lozg</a></p>
+               <p><a href="https://www.linkedin.com/in/gonzalo-lozg/" target="_blank">@gonzalo-lozg</a></p>
              </div>
+
+             <div class="phone">
+               <i class="bi bi-github"></i>
+               <h4>Github:</h4>
+               <p><a href="https://github.com/gonzalo-droid" target="_blank">@gonzalo-droid</a></p>
+             </div>
+
+             <div class="phone">
+              <i class="bi bi-instagram"></i>
+              <h4>Instagram:</h4>
+              <p><a href="https://www.instagram.com/gonzalo.lozg/" target="_blank">@gonzalo.lozg</a></p>
+            </div>
 
 
            </div>
