--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -11,18 +11,9 @@
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
-                <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="" />
+                <img src="assets/img/portfolio/app_erp.png" alt="" />
               </div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
         </div>
 
@@ -31,7 +22,7 @@
             <h3>Sistema para lotes y viviendas: Android</h3>
             <p>
                 <small>
-                    Complementeo del sistema web, enfocado para el uso de los asesores de venta
+                    Complemento del sistema web, enfocado para el uso de los asesores de venta
                 </small>
               </p>
             <p>
@@ -39,7 +30,6 @@
             </p>
             <p><strong>Role</strong>:   Android Developer</p>
             <p><strong>Tech</strong>:   Kotlin, MVP, Retrofit, Firebase (notifications), SharedPreferences, Dagger2, Play Store, Git | Github</p>
-            <p><strong>Link</strong>: <a href="#">www.example.com</a></p>
           </div>
         </div>
       </div>
@@ -58,11 +48,10 @@
                 </small>
               </p>
             <p>
-              Forme parte de todo el ciclo de desarrollo. Las features más retadoras fueron la gestión de pagos, generación de contratos y implemtación de facturación electrónica.
+              Proyecto multiempresa donde tuvimos que adaptarnos a diferentes casos de uso que presentaban los clientes. Las features más retadoras fueron la gestión de pagos, generación de contratos e implementación de facturación electrónica.
             </p>
             <p><strong>Role</strong>:   FullStack Developer</p>
-            <p><strong>Tech</strong>:   Laravel 6, javascript | Vue, MySQL, Apache2</p>
-            <p><strong>Link</strong>:   <a href="#">www.example.com</a></p>
+            <p><strong>Tech</strong>:   Laravel 6, javascript | Vue, MySQL, Apache2, , Git | Github</p>
           </div>
         </div>
 
@@ -70,7 +59,7 @@
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
-                <img src="assets/img/portfolio/app_crm.png" alt="" />
+                <img src="assets/img/portfolio/web_erp.png" alt="" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -100,11 +89,10 @@
                 <small>Complementeo del sistema web, enfocado para el uso de los asesores de venta</small>
               </p>
             <p>
-              Tome el cargo de desarrollar la aplicación android en Java. Propuse los flujos funcionales además de estimaciones para entregas te valor.
+              Tome el cargo de desarrollar la aplicación android en Java. Propuse los flujos funcionales además de las estimaciones para las entregas. Además utilice los servicios de google para registrar las ubicaciones y visitas de los asesores a sus clientes.
             </p>
             <p><strong>Role</strong>: Android Developer</p>
             <p><strong>Tech</strong>: Java, MVC, Volley, Firebase (auth y notifications), SharedPreferences, Play Store, Git | Github</p>
-            <p><strong>Link</strong>: <a href="#">www.example.com</a></p>
           </div>
         </div>
       </div>
@@ -121,11 +109,10 @@
                 <small>Sistema comercial de gestión de clientes, brindando seguimiento en el proceso de pre-venta y post-venta.</small>
               </p>
             <p>
-              Fue el primer proyecto comencial que participe. Forma parte del proceso de analísis de requerimientos, desarrollo, despliegue, capacitación al usuario y mantenimiento.
+              Fue el primer proyecto comercial que participe. Forma parte del proceso de analísis de requerimientos, desarrollo, despliegue, capacitación al usuario y mantenimiento.
             </p>
             <p><strong>Role</strong>: FullStack Developer</p>
-            <p><strong>Tech</strong>: Laravel 6, javascript, MySQL, Apache2</p>
-            <p><strong>Link</strong>: <a href="#">www.example.com</a></p>
+            <p><strong>Tech</strong>: Laravel 6, javascript, MySQL, Apache2, Git | Github</p>
           </div>
         </div>
 
@@ -133,14 +120,9 @@
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
-                <img src="assets/img/portfolio/app_crm.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="" />
+                <img src="assets/img/portfolio/web_crm.png" alt="" />
               </div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
         </div>
 
