--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,8 +3,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Hola!</h2>
-          <p>Me puedes llamar Gonzalo, acontinuación te comento un poco sobre mí:</p>
+          <h2>Hi!</h2>
+          <p>Bienvenido a este pequeño espacio de internet dondé te comentaré un poco sobre y mi desarrollo profesional como Mobile Developer. 
+          </p>
         </div>
 
         <div class="row">
@@ -23,19 +24,34 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Firebase</strong> 
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Kotlin</strong>
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>MVVM/MVI</strong> 
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Retrofit</strong> 
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Testing</strong> 
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Room</strong> 
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>Coroutines</strong> 
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i> 
+                    <strong>DataStore</strong> 
+                  </li>
                 </ul>
               </div>
             </div>
