Added ulearning project

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -11,6 +11,71 @@
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
+                <img src="assets/img/portfolio/app_ulearning.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>U-Learning: Android</h3>
+            <p>
+                <small>
+                    Aplicación para el uso del estudiante.
+                </small>
+              </p>
+            <p>
+               Cada vez me enfoco en mejorar la orgranización y legibilidad del proyecto. Aplique MVI,  StateFlow/SharedFlow y testing con Mockito.
+               Poryecto en progreso.
+            </p>
+            <p><strong>Role</strong>:   Android Developer</p>
+            <p><strong>Tech</strong>:   Kotlin, MVI, Retrofit, StateFlow, Firebase, Proto DataStore, Hilt, Coroutines, Play Store, Material 3, DataBinding, Git | Github</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="portfolio-details">
+      <div class="row gy-4">
+
+
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>U-Learning: Sistema Web</h3>
+            <p>
+                <small>
+                    Portal de educación online. Portal de intranet para el estudiante. Portal adminitrativo
+                </small>
+              </p>
+            <p>
+              Fue un proyecto donde abarcamos 3 sistemas que se intercomunican. Configure AWS para el uso de las instancias EC2 y el despliegue continuo de los sistemas.
+            </p>
+            <p><strong>Role</strong>:   FullStack Developer</p>
+            <p><strong>Tech</strong>:   Laravel 8, Angular 12, Postgres, AWS, , Git | Github</p>
+          </div>
+        </div>
+
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+              <div class="swiper-slide">
+                <img src="assets/img/portfolio/web_ulearning.png" alt="" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="portfolio-details">
+      <div class="row gy-4">
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+              <div class="swiper-slide">
                 <img src="assets/img/portfolio/app_erp.png" alt="" />
               </div>
             </div>
@@ -29,7 +94,7 @@
               Me enfoque en mejorar mi código para ello segui los principios SOLID, arquitectura por capas, control de versiones y además aplique inyección de dependencias.
             </p>
             <p><strong>Role</strong>:   Android Developer</p>
-            <p><strong>Tech</strong>:   Kotlin, MVP, Retrofit, Firebase (notifications), SharedPreferences, Dagger2, Play Store, Git | Github</p>
+            <p><strong>Tech</strong>:   Kotlin, MVP, Retrofit, LiveData, Firebase, SharedPreferences, Dagger2, Coroutines, Play Store, DataBinding,Git | Github</p>
           </div>
         </div>
       </div>
@@ -92,7 +157,7 @@
               Tome el cargo de desarrollar la aplicación android en Java. Propuse los flujos funcionales además de las estimaciones para las entregas. Además utilice los servicios de google para registrar las ubicaciones y visitas de los asesores a sus clientes.
             </p>
             <p><strong>Role</strong>: Android Developer</p>
-            <p><strong>Tech</strong>: Java, MVC, Volley, Firebase (auth y notifications), SharedPreferences, Play Store, Git | Github</p>
+            <p><strong>Tech</strong>: Java, MVC, Volley, Firebase, SharedPreferences, Play Store, Git | Github</p>
           </div>
         </div>
       </div>
