--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -34,7 +34,7 @@
                     <strong>MVVM/MVI</strong> 
                   </li>
                   <li><i class="bi bi-chevron-right"></i> 
-                    <strong>Retrofit</strong> 
+                    <strong>Git | Github</strong> 
                   </li>
                 </ul>
               </div>
