--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -6,11 +6,11 @@
 
     <div class="profile d-flex justify-content">
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/gonzalo.lozg/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/gonzalo.lozg/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
           
-          <a href="https://github.com/gonzalo-droid" target="_blank"  class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/gonzalo-droid" target="_blank"  class="google-plus"><i class="bi bi-github"></i></a>
 
-          <a href="https://www.linkedin.com/in/gonzalo-lozg/" target="_blank"  class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/gonzalo-lozg/" target="_blank"  class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
